# manufacture-hub-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  docker-compose.yaml  makefile  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 30d8b9f3a90b_create_user_table.py  4725c3be097d_add_users_and_revoked_tokens.py  772f6a521fb5_create_user_table.py  b8ac45eccddb_add_users_model.py  d5598f67f1fe_add_tokens_model.py  fe01bc2a158b_update_user_table_schema_name.py
src/: main.py
src/account/: auth.py  db.py  db_models.py  dependencies.py  deps.py  enums.py  models.py  routes.py  schemas.py  services.py  utils.py
src/accounts/: auth.py  cruds.py  database.py  models.py  routes.py  services.py
src/auth/: dependencies.py  routes.py  schemas.py  services.py
src/core/: configs.py  database.py  db.py  dependencies.py  deps.py  envs.py  errors.py  exceptions.py  security.py  settings.py  types.py  utils.py
