[tool.poetry]
name = "orghub"
version = "0.1.0"
description = ""
authors = ["mohsen padidar <mxpadidar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
sqlalchemy = "^2.0.25"
psycopg = "^3.1.17"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
pydantic-settings = "^2.1.0"
pydantic = { extras = ["email"], version = "^2.5.3" }
passlib = "^1.7.4"
bcrypt = "4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"
black = "^24.1.1"
pre-commit = "^3.6.0"
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.mypy]
ignore_missing_imports = true
mypy_path = '$MYPY_CONFIG_FILE_DIR/'
